examples/invalid/not_declared/chord_var.vbr
chord B {
    x: B
}

moderato() {
    a: B <-> b.x|
}